--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,8 +1,8 @@
 // colors //
-
-$color-light-pink: #ffe5e5;
+$color-primary: #FEE5E5;
 $color-pink-1: #FA5959;
 $color-pink-2: #FF6B6BD9;
+$color-pink-3: #ED4A4A;
 $color-white: #fff;
 $color-black: #000;
 $color-grey: #6C6A6A;
