--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -3,6 +3,7 @@ $color-primary: #FEE5E5;
 $color-pink-1: #FA5959;
 $color-pink-2: #FF6B6BD9;
 $color-pink-3: #ED4A4A;
+$color-pink-4: #fff5f5;
 $color-white: #fff;
 $color-black: #000;
 $color-grey: #6C6A6A;
