--- a/css/style.css
+++ b/css/style.css
@@ -12,11 +12,40 @@ html {
 body {
   font-family: 'Montserrat', sans-serif;
   font-weight: 400;
+  font-size: 1.6rem;
   line-height: 1.6;
   color: #000;
   background-color: #fff;
   background-size: cover;
   min-height: 100vh; }
+
+.header {
+  margin-bottom: 112px;
+  padding: 32px 0 0 160px;
+  background-color: #FEE5E5;
+  display: grid;
+  grid-template-rows: repeat(5, min-content);
+  grid-template-columns: repeat(2, minmax(20vw, min-content)) 40vw;
+  grid-row-gap: 3rem;
+  align-items: end;
+  justify-items: start;
+  overflow: hidden; }
+  .header h1 {
+    grid-column: 1 / span 2;
+    grid-row: 2 / 3; }
+  .header p {
+    grid-column: 1 / 2;
+    grid-row: 3 / 4; }
+  .header__btn {
+    grid-column: 1 / 2;
+    grid-row: 4 / 5;
+    margin-bottom: 5rem; }
+  .header__img {
+    grid-column: 3 / -1;
+    grid-row: 1 / -1;
+    display: block;
+    width: 80rem;
+    height: auto; }
 
 .navbar {
   display: flex;
@@ -80,3 +109,10 @@ body {
     transition: all .2s; }
     .btn--dark:hover, .btn--dark:active {
       transform: translateY(0.4rem); }
+
+h1 {
+  font-size: 3.6rem;
+  font-weight: 500;
+  font-style: normal;
+  line-height: 4.8rem;
+  color: #000; }
