--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -25,6 +25,7 @@ html {
 body {
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
+    font-size: 1.6rem;
     line-height: 1.6;
     color: $color-black;
     background-color: $color-white;
