--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -42,4 +42,13 @@
     }
 }
 
+// FONT //
+h1 {
+    font-size: 3.6rem;
+    font-weight: 500;
+    font-style: normal;
+    line-height: 4.8rem;
+    color: $color-black;
+}
+
 
