--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -5,7 +5,7 @@
     display: grid;
     grid-template-rows: repeat(5, min-content);
     grid-template-columns: repeat(2, minmax(20vw, min-content)) 40vw;
-    grid-row-gap: 3rem;
+    grid-row-gap: 48px;
     align-items: end;
     justify-items: start;
     overflow: hidden;
@@ -30,7 +30,11 @@
         grid-column: 3 / -1;
         grid-row: 1 / -1;
         display: block;
-        width: 80rem;
+        width: 800px;
         height: auto;
+
+        @media only screen and (max-width: 800px) {
+            grid-column: 2 / 3;
+        }
     }
 }
