--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -19,6 +19,51 @@ body {
   background-size: cover;
   min-height: 100vh; }
 
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  column-gap: 7rem;
+  justify-items: center;
+  align-items: center;
+  margin: 4rem 10rem; }
+  .gallery__h2 {
+    grid-column: 1 / -1;
+    grid-row: 1 / 2; }
+  .gallery__select {
+    grid-column: 1 / -1;
+    grid-row: 2 / 3; }
+  .gallery__cakes {
+    grid-column: 1 / -1;
+    grid-row: 3 / 4;
+    display: flex;
+    justify-content: space-evenly; }
+  .gallery__cake {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+    border-radius: 9px 9px 0px 0px;
+    border: 1px solid #FFFFFF;
+    box-shadow: 4px 4px 4px rgba(252, 214, 214, 0.1), inset 4px 4px 4px rgba(251, 232, 232, 0.1);
+    margin: 0 1.6rem; }
+    .gallery__cake-h3 {
+      padding: 0 2rem 1.7rem 2rem;
+      text-align: center; }
+    .gallery__cake-p {
+      padding: 0 2rem 1.9rem 2rem;
+      text-align: center; }
+    .gallery__cake-quantity {
+      padding-bottom: 1.5rem; }
+    .gallery__cake-price {
+      font-style: normal;
+      font-weight: 500;
+      font-size: 3rem;
+      line-height: 3.7rem;
+      padding-bottom: 3rem; }
+  .gallery__btn {
+    grid-column: 1 / -1;
+    grid-row: 4 / 5; }
+
 .header {
   margin-bottom: 112px;
   padding: 32px 0 0 160px;
@@ -26,7 +71,7 @@ body {
   display: grid;
   grid-template-rows: repeat(5, min-content);
   grid-template-columns: repeat(2, minmax(20vw, min-content)) 40vw;
-  grid-row-gap: 3rem;
+  grid-row-gap: 48px;
   align-items: end;
   justify-items: start;
   overflow: hidden; }
@@ -44,8 +89,11 @@ body {
     grid-column: 3 / -1;
     grid-row: 1 / -1;
     display: block;
-    width: 80rem;
+    width: 800px;
     height: auto; }
+    @media only screen and (max-width: 800px) {
+      .header__img {
+        grid-column: 2 / 3; } }
 
 .navbar {
   display: flex;
@@ -116,3 +164,17 @@ h1 {
   font-style: normal;
   line-height: 4.8rem;
   color: #000; }
+
+h2 {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 3rem;
+  line-height: 3.7rem;
+  color: #000; }
+
+.berry {
+  position: relative; }
+  .berry__strawberry {
+    display: block;
+    position: absolute;
+    transform: translate(150%, -120%); }
