--- a/css/style.css
+++ b/css/style.css
@@ -19,10 +19,29 @@ body {
   background-size: cover;
   min-height: 100vh; }
 
+.about {
+  display: grid;
+  grid-template-columns: minmax(15rem, min-content) 1fr;
+  column-gap: 6rem;
+  justify-items: flex-start;
+  align-items: center;
+  margin: 10rem 40rem 10rem 10rem; }
+  .about__pic {
+    max-width: 27rem;
+    display: block;
+    grid-column: 1 / 2;
+    grid-row: 1 / 2; }
+  .about__text {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+    display: grid;
+    grid-template-rows: repeat(3, min-content);
+    row-gap: 1.8rem; }
+
 .gallery {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-row-gap: 7rem;
+  row-gap: 7rem;
   justify-items: center;
   align-items: center;
   margin: 4rem 10rem; }
@@ -194,6 +213,23 @@ h2 {
   font-weight: 500;
   font-size: 3rem;
   line-height: 3.7rem;
+  color: #000; }
+
+h3 {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 1.6rem;
+  line-height: 2.5rem;
+  letter-spacing: 0.06em;
+  color: #000;
+  text-transform: uppercase; }
+
+h4 {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 1.8rem;
+  line-height: 2.5rem;
+  letter-spacing: 0.04em;
   color: #000; }
 
 .berry {
