--- a/sass/_gallery.scss
+++ b/sass/_gallery.scss
@@ -1,7 +1,7 @@
 .gallery {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-row-gap: 7rem;
+    row-gap: 7rem;
     justify-items: center;
     align-items: center;
     margin: 4rem 10rem;
