--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -129,5 +129,13 @@ h4 {
         transform: translate(-25rem, -10%);
         max-width: 7vw;
     }
+
+    &__raspberry {
+        display: block;
+        position: absolute;
+        right: 0;
+        transform: translate(-350%, -10%);
+        max-width: 10vw;
+    }
 }
 
