Section My work

--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -30,7 +30,7 @@
         grid-column: 3 / -1;
         grid-row: 1 / -1;
         display: block;
-        width: 800px;
+        width: 80rem;
         height: auto;
 
         @media only screen and (max-width: 800px) {
