--- a/css/style.css
+++ b/css/style.css
@@ -46,18 +46,19 @@ body {
   .features .table {
     box-shadow: 4px 4px 4px rgba(252, 214, 214, 0.1), inset 4px 4px 4px rgba(251, 232, 232, 0.1);
     border-radius: 12px;
-    max-width: 25rem;
+    max-width: 20rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 4rem 20% 4rem 20%; }
+    padding: 5rem 3rem; }
     .features .table__icon {
       height: 6rem;
       width: 6rem; }
     .features .table__p {
       text-align: center;
-      font-size: 16px; }
+      font-size: 16px;
+      padding-top: 3rem; }
 
 .gallery {
   display: grid;
@@ -129,11 +130,40 @@ body {
     grid-column: 3 / -1;
     grid-row: 1 / -1;
     display: block;
-    width: 800px;
+    width: 80rem;
     height: auto; }
     @media only screen and (max-width: 800px) {
       .header__img {
         grid-column: 2 / 3; } }
+
+.mywork {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: calc(((100vw - 20rem)/5)/6);
+  justify-content: center;
+  justify-items: center;
+  margin: 0 10rem; }
+  .mywork__h2 {
+    grid-column: 1 / -1;
+    grid-row: 1 / 2;
+    z-index: 10;
+    align-self: center;
+    margin-bottom: 7rem; }
+  .mywork__item {
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+    padding-top: 100%; }
+    .mywork__item--1 {
+      grid-column: 1 / 3;
+      grid-row: 2 / 4; }
+  .mywork__img {
+    width: 100%;
+    height: 100%;
+    display: block; }
+  .mywork__btn {
+    grid-column: 1 / -1;
+    margin-top: 4rem; }
 
 .navbar {
   display: flex;
@@ -255,19 +285,27 @@ h4 {
 
 .berry {
   position: relative; }
-  .berry__strawberry {
+  .berry__1 {
     display: block;
     position: absolute;
     transform: translate(150%, -120%); }
-  .berry__blueberry {
+  .berry__2 {
     display: block;
     position: absolute;
     right: 0;
     transform: translate(-25rem, -10%);
     max-width: 7vw; }
-  .berry__raspberry {
+  .berry__3 {
     display: block;
     position: absolute;
     right: 0;
     transform: translate(-350%, -10%);
+    max-width: 10vw; }
+  .berry__4 {
+    display: block;
+    position: absolute; }
+  .berry__5 {
+    display: block;
+    position: absolute;
+    right: 0;
     max-width: 10vw; }
