--- a/sass/_features.scss
+++ b/sass/_features.scss
@@ -7,12 +7,12 @@
     .table{
         box-shadow: 4px 4px 4px rgba(252, 214, 214, 0.1), inset 4px 4px 4px rgba(251, 232, 232, 0.1);
         border-radius: 12px;
-        max-width: 25rem;
+        max-width: 20rem;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        padding: 4rem 20% 4rem 20%;
+        padding: 5rem 3rem;
 
         &__icon {
             height: 6rem;
@@ -23,6 +23,7 @@
         &__p {
             text-align: center;
             font-size: 16px;
+            padding-top: 3rem;
         }
     }
 }
