--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -87,27 +87,25 @@ h1 {
 
 h2 {
     font-style: normal;
-    font-weight: 500;
-    font-size: 3rem;
-    line-height: 3.7rem;
+    text-transform: uppercase;
+    font-size: 30px;
+    line-height: 37px;
+    letter-spacing: 0.06em;
     color: $color-black;
 }
 
 h3 {
-    font-style: normal;
-    font-weight: 600;
-    font-size: 1.6rem;
-    line-height: 2.5rem;
+    text-transform: uppercase;
+    font-size: 16px;
+    line-height: 25px;
     letter-spacing: 0.06em;
     color: $color-black;
-    text-transform: uppercase;
 }
 
 h4 {
     font-style: normal;
-    font-weight: 500;
-    font-size: 1.8rem;
-    line-height: 2.5rem;
+    font-size: 18px;
+    line-height: 25px;
     letter-spacing: 0.04em;
     color: $color-black;
 }
@@ -148,6 +146,14 @@ h4 {
         position: absolute;
         right: 0;
         max-width: 10vw;
+    }
+
+    &--6 {
+        display: block;
+        position: absolute;
+        width: 25rem;
+        transform: translate(0, -290px);
+        left: 5rem;
     }
 }
 
