--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -38,6 +38,39 @@ body {
     grid-template-rows: repeat(3, min-content);
     row-gap: 1.8rem; }
 
+.delivery {
+  display: grid;
+  justify-content: center;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 4rem repeat(2, min-content);
+  grid-row-gap: 8rem;
+  grid-column-gap: 6rem;
+  margin: 10rem; }
+  .delivery__h2 {
+    grid-column: 1 / -1;
+    grid-row: 1 / 2;
+    text-align: center;
+    margin: 0; }
+  .delivery__card {
+    background-color: #FEE5E5;
+    border-radius: 12px;
+    padding: 5rem;
+    display: flex;
+    align-items: center; }
+  .delivery--1 {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3; }
+  .delivery--2 {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3; }
+  .delivery__card-text {
+    text-align: center;
+    flex: 1; }
+  .delivery__info {
+    grid-column: 1 / -1;
+    grid-row: 3 / 4;
+    text-align: center; }
+
 .features {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -199,6 +232,41 @@ body {
   .navbar__list-link:hover, .navbar__list-link:active {
     color: #ED4A4A; }
 
+.reviews__h2 {
+  text-align: center;
+  margin-bottom: 2cqh; }
+
+.reviews__p {
+  text-align: center;
+  margin: 0 25%; }
+
+.reviews__btn {
+  display: flex;
+  margin: 5rem auto; }
+
+.review {
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  grid-row-gap: 7rem;
+  grid-column-gap: 4rem;
+  margin: 10rem;
+  border-radius: 5px;
+  padding: 2.5rem; }
+  .review--1 {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3; }
+  .review--2 {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3; }
+  .review--3 {
+    grid-column: 3 / 4;
+    grid-row: 2 / 3; }
+  .review__h4 {
+    margin-top: 3.8rem;
+    margin-bottom: 1.6rem; }
+  .review__img {
+    width: 14rem; }
+
 .btn {
   border: none;
   border-radius: 50px;
@@ -261,25 +329,23 @@ h1 {
 
 h2 {
   font-style: normal;
-  font-weight: 500;
-  font-size: 3rem;
-  line-height: 3.7rem;
+  text-transform: uppercase;
+  font-size: 30px;
+  line-height: 37px;
+  letter-spacing: 0.06em;
   color: #000; }
 
 h3 {
-  font-style: normal;
-  font-weight: 600;
-  font-size: 1.6rem;
-  line-height: 2.5rem;
+  text-transform: uppercase;
+  font-size: 16px;
+  line-height: 25px;
   letter-spacing: 0.06em;
-  color: #000;
-  text-transform: uppercase; }
+  color: #000; }
 
 h4 {
   font-style: normal;
-  font-weight: 500;
-  font-size: 1.8rem;
-  line-height: 2.5rem;
+  font-size: 18px;
+  line-height: 25px;
   letter-spacing: 0.04em;
   color: #000; }
 
@@ -309,3 +375,9 @@ h4 {
     position: absolute;
     right: 0;
     max-width: 10vw; }
+  .berry--6 {
+    display: block;
+    position: absolute;
+    width: 25rem;
+    transform: translate(0, -290px);
+    left: 5rem; }
