--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,55 @@ body {
     grid-template-rows: repeat(3, min-content);
     row-gap: 1.8rem; }
 
+.contacts {
+  background: linear-gradient(0deg, #ffe5e5, #ffe5e5 95%, rgba(255, 229, 229, 0) 100%);
+  padding: 2rem 0 0 10rem;
+  margin-bottom: 7rem;
+  display: grid;
+  grid-template-rows: repeat(5, min-content);
+  grid-template-columns: repeat(2, minmax(20vw, min-content)) 40vw;
+  grid-row-gap: 3rem;
+  align-items: end;
+  justify-items: start;
+  overflow: hidden; }
+  .contacts__h2 {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2; }
+  .contacts__info {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+    display: grid;
+    grid-template-columns: repeat(2, max-content);
+    grid-column-gap: 2rem;
+    grid-row-gap: 2rem;
+    justify-items: start;
+    align-items: center; }
+  .contacts__btn {
+    grid-column: 1 / 2;
+    grid-row: 4 / 5; }
+  .contacts__img--main {
+    width: 100rem;
+    grid-column: 2 / 3;
+    grid-row: 1 / -1;
+    transform: translate(50%, -110%);
+    justify-self: end;
+    margin-right: 3rem;
+    height: auto; }
+  .contacts__img--1 {
+    width: 20rem;
+    grid-column: 1 / 2;
+    grid-row: 3 / 4;
+    transform: translate(200%, 40%); }
+  .contacts__img--2 {
+    width: 10rem;
+    grid-column: 3 / 4;
+    grid-row: 3 / 4; }
+  .contacts__img--3 {
+    width: 10rem;
+    grid-column: 3 / 4;
+    grid-row: 1 / 2;
+    transform: translateX(80%); }
+
 .delivery {
   display: grid;
   justify-content: center;
@@ -172,7 +221,7 @@ body {
 .mywork {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: calc(((100vw - 20rem)/5)/6);
+  grid-gap: calc(((100vw - 20rem)/5)/6);
   justify-content: center;
   justify-items: center;
   margin: 0 10rem; }
@@ -183,10 +232,7 @@ body {
     align-self: center;
     margin-bottom: 7rem; }
   .mywork__item {
-    overflow: hidden;
-    position: relative;
-    width: 100%;
-    padding-top: 100%; }
+    overflow: hidden; }
     .mywork__item--1 {
       grid-column: 1 / 3;
       grid-row: 2 / 4; }
@@ -381,3 +427,27 @@ h4 {
     width: 25rem;
     transform: translate(0, -290px);
     left: 5rem; }
+
+figcaption {
+  position: absolute;
+  top: auto;
+  bottom: 0;
+  left: 0;
+  opacity: 0;
+  height: auto;
+  width: 100%;
+  padding: 1rem 2rem;
+  background-color: #6C6A6A;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 2.5rem;
+  text-align: center;
+  letter-spacing: 0.04em;
+  color: #fff;
+  transform: translateY(100%);
+  transition: transform 0.4s, opacity 0.1s 0.3s; }
+
+.fig--small {
+  font-size: 1.4rem;
+  line-height: 2rem; }
