--- a/sass/_mywork.scss
+++ b/sass/_mywork.scss
@@ -1,10 +1,13 @@
 .mywork {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: calc(((100vw - 20rem)/5)/6);
+    
+    grid-gap: calc(((100vw - 20rem)/5)/6);
+    
     justify-content: center;
     justify-items: center;
     margin: 0 10rem;
+
 
     &__h2 {
         grid-column: 1 / -1;
@@ -16,14 +19,12 @@
 
     &__item {
         overflow: hidden;
-        position: relative;
-        width: 100%;
-        padding-top: 100%;
-
+        
         &--1 {
             grid-column: 1 / 3;
             grid-row: 2 / 4;
         }
+        
     }
 
     &__img {
@@ -37,3 +38,4 @@
         margin-top: 4rem;
     }
 }
+
