--- a/css/style.css
+++ b/css/style.css
@@ -123,32 +123,31 @@ body {
 .features {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-column-gap: 5rem;
-  margin: 10rem; }
+  margin: 5rem; }
   .features .table {
     box-shadow: 4px 4px 4px rgba(252, 214, 214, 0.1), inset 4px 4px 4px rgba(251, 232, 232, 0.1);
-    border-radius: 12px;
-    max-width: 20rem;
+    border-radius: 10px;
+    max-width: 25rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 5rem 3rem; }
+    padding: 10% 4rem 10%; }
     .features .table__icon {
-      height: 6rem;
-      width: 6rem; }
+      height: 4rem;
+      width: 4rem;
+      fill: #ED4A4A;
+      margin-bottom: 3rem; }
     .features .table__p {
-      text-align: center;
-      font-size: 16px;
-      padding-top: 3rem; }
+      text-align: center; }
 
 .gallery {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  row-gap: 7rem;
+  row-gap: 2rem;
   justify-items: center;
   align-items: center;
-  margin: 4rem 10rem; }
+  margin: 0 10rem; }
   .gallery__h2 {
     grid-column: 1 / -1;
     grid-row: 1 / 2; }
