--- a/sass/_features.scss
+++ b/sass/_features.scss
@@ -1,29 +1,27 @@
 .features{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-column-gap: 5rem;
-    margin: 10rem;
+    margin: 5rem;
 
     .table{
         box-shadow: 4px 4px 4px rgba(252, 214, 214, 0.1), inset 4px 4px 4px rgba(251, 232, 232, 0.1);
-        border-radius: 12px;
-        max-width: 20rem;
+        border-radius: 10px;
+        max-width: 25rem;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        padding: 5rem 3rem;
+        padding: 10% 4rem 10%;
 
         &__icon {
-            height: 6rem;
-            width: 6rem;
-            
+            height: 4rem;
+            width: 4rem;
+            fill: $color-pink-3;
+            margin-bottom: 3rem;
         }
 
         &__p {
             text-align: center;
-            font-size: 16px;
-            padding-top: 3rem;
         }
     }
 }
