--- a/sass/_gallery.scss
+++ b/sass/_gallery.scss
@@ -1,10 +1,10 @@
 .gallery {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    row-gap: 7rem;
+    row-gap: 2rem;
     justify-items: center;
     align-items: center;
-    margin: 4rem 10rem;
+    margin: 0 10rem;
 
     &__h2 {
         grid-column: 1 / -1;
@@ -40,7 +40,7 @@
         }
 
         &-p {
-            //padding-bottom: 1.9rem;
+           
             padding: 0 2rem 1.9rem 2rem;
             text-align: center;
         }
