--- a/css/style.css
+++ b/css/style.css
@@ -40,52 +40,57 @@ body {
 
 .contacts {
   background: linear-gradient(0deg, #ffe5e5, #ffe5e5 95%, rgba(255, 229, 229, 0) 100%);
-  padding: 2rem 0 0 10rem;
-  margin-bottom: 7rem;
-  display: grid;
-  grid-template-rows: repeat(5, min-content);
-  grid-template-columns: repeat(2, minmax(20vw, min-content)) 40vw;
-  grid-row-gap: 3rem;
-  align-items: end;
-  justify-items: start;
+  padding: 10rem 15rem;
   overflow: hidden; }
-  .contacts__h2 {
-    grid-column: 1 / 2;
-    grid-row: 1 / 2; }
-  .contacts__info {
-    grid-column: 1 / 2;
-    grid-row: 2 / 3;
+  .contacts .contact {
+    background: #fff;
+    box-shadow: 0 0 2px 4px rgba(236, 214, 214, 0.4);
+    border-radius: 15px;
     display: grid;
-    grid-template-columns: repeat(2, max-content);
-    grid-column-gap: 2rem;
-    grid-row-gap: 2rem;
+    grid-template-columns: minmax(50, 1fr) minmax(0, 1fr);
+    grid-template-rows: repeat(3, min-content);
+    align-items: center;
     justify-items: start;
-    align-items: center; }
-  .contacts__btn {
-    grid-column: 1 / 2;
-    grid-row: 4 / 5; }
+    padding: 5rem 6rem 0 8rem; }
+    .contacts .contact__h2 {
+      grid-column: 1 / 2;
+      grid-row: 1 / 2; }
+    .contacts .contact__info {
+      grid-column: 1 / 2;
+      grid-row: 2 / 3;
+      display: grid;
+      grid-template-columns: repeat(2, max-content);
+      grid-column-gap: 1rem;
+      grid-row-gap: 2rem;
+      justify-items: start;
+      align-items: center; }
+    .contacts .contact__icon {
+      width: 2.5rem;
+      height: 2.5rem;
+      fill: #FA5959; }
+    .contacts .contact__btn {
+      grid-column: 1 / 2;
+      grid-row: 3 / 4; }
   .contacts__img--main {
-    width: 100rem;
+    width: 80%;
     grid-column: 2 / 3;
     grid-row: 1 / -1;
-    transform: translate(50%, -110%);
+    transform: scale(1.2) translateY(-5%);
     justify-self: end;
-    margin-right: 3rem;
-    height: auto; }
+    margin-right: 10rem; }
   .contacts__img--1 {
+    width: 12rem;
+    transform: translate(180%) scale(-1, 1); }
+  .contacts__img--2 {
     width: 20rem;
     grid-column: 1 / 2;
     grid-row: 3 / 4;
     transform: translate(200%, 40%); }
-  .contacts__img--2 {
-    width: 10rem;
-    grid-column: 3 / 4;
-    grid-row: 3 / 4; }
   .contacts__img--3 {
     width: 10rem;
     grid-column: 3 / 4;
-    grid-row: 1 / 2;
-    transform: translateX(80%); }
+    grid-row: 3 / 4;
+    transform: translate(120%); }
 
 .delivery {
   display: grid;
@@ -102,7 +107,7 @@ body {
     margin: 0; }
   .delivery__card {
     background-color: #FEE5E5;
-    border-radius: 12px;
+    border-radius: 10px;
     padding: 5rem;
     display: flex;
     align-items: center; }
@@ -112,6 +117,10 @@ body {
   .delivery--2 {
     grid-column: 2 / 3;
     grid-row: 2 / 3; }
+  .delivery__icon {
+    height: 5rem;
+    width: 7rem;
+    fill: #ED4A4A; }
   .delivery__card-text {
     text-align: center;
     flex: 1; }
@@ -150,10 +159,12 @@ body {
   margin: 0 10rem; }
   .gallery__h2 {
     grid-column: 1 / -1;
-    grid-row: 1 / 2; }
+    grid-row: 1 / 2;
+    margin-bottom: 3rem; }
   .gallery__select {
     grid-column: 1 / -1;
-    grid-row: 2 / 3; }
+    grid-row: 2 / 3;
+    margin-bottom: 3rem; }
   .gallery__cakes {
     grid-column: 1 / -1;
     grid-row: 3 / 4;
@@ -168,8 +179,13 @@ body {
     border: 1px solid #FFFFFF;
     box-shadow: 4px 4px 4px rgba(252, 214, 214, 0.1), inset 4px 4px 4px rgba(251, 232, 232, 0.1);
     margin: 0 1.6rem; }
+    .gallery__cake-img {
+      display: block;
+      width: 100%;
+      height: auto;
+      padding-bottom: 3rem; }
     .gallery__cake-h3 {
-      padding: 0 2rem 1.7rem 2rem;
+      padding: 0 2rem 2rem 2rem;
       text-align: center; }
     .gallery__cake-p {
       padding: 0 2rem 1.9rem 2rem;
@@ -180,7 +196,7 @@ body {
       font-style: normal;
       font-weight: 500;
       font-size: 3rem;
-      line-height: 3.7rem;
+      line-height: 3.6rem;
       padding-bottom: 3rem; }
   .gallery__btn {
     grid-column: 1 / -1;
@@ -373,10 +389,9 @@ h1 {
   color: #000; }
 
 h2 {
-  font-style: normal;
-  text-transform: uppercase;
-  font-size: 30px;
-  line-height: 37px;
+  font-weight: 500;
+  font-size: 3rem;
+  line-height: 3.6rem;
   letter-spacing: 0.06em;
   color: #000; }
 
@@ -404,8 +419,8 @@ h4 {
     display: block;
     position: absolute;
     right: 0;
-    transform: translate(-25rem, -10%);
-    max-width: 7vw; }
+    transform: translate(-28rem, -20%);
+    max-width: 8vw; }
   .berry__3 {
     display: block;
     position: absolute;
