--- a/sass/_delivery.scss
+++ b/sass/_delivery.scss
@@ -16,7 +16,7 @@
 
     &__card {
         background-color: $color-primary;
-        border-radius: 12px;
+        border-radius: 10px;
         padding: 5rem;
         display: flex;
         align-items: center;
@@ -29,6 +29,12 @@
     &--2 {
         grid-column: 2 / 3;
         grid-row: 2 / 3;
+    }
+
+    &__icon {
+        height: 5rem;
+        width: 7rem;
+        fill: $color-pink-3;
     }
 
     &__card-text {
