--- a/sass/_gallery.scss
+++ b/sass/_gallery.scss
@@ -9,11 +9,13 @@
     &__h2 {
         grid-column: 1 / -1;
         grid-row: 1 / 2;
+        margin-bottom: 3rem;
     }
 
     &__select {
         grid-column: 1 / -1;
         grid-row: 2 / 3;
+        margin-bottom: 3rem;
     }
 
     &__cakes {
@@ -33,9 +35,15 @@
         box-shadow: 4px 4px 4px rgba(252, 214, 214, 0.1), inset 4px 4px 4px rgba(251, 232, 232, 0.1);
         margin: 0 1.6rem;
     
+        &-img {
+            display: block;
+            width: 100%;
+            height: auto;
+            padding-bottom: 3rem;
+        }
 
         &-h3 {
-            padding: 0 2rem 1.7rem 2rem;
+            padding: 0 2rem 2rem 2rem;
             text-align: center;
         }
 
@@ -53,7 +61,7 @@
             font-style: normal;
             font-weight: 500;
             font-size: 3rem;
-            line-height: 3.7rem;
+            line-height: 3.6rem;
             padding-bottom: 3rem;
         }
     }
@@ -62,4 +70,6 @@
         grid-column: 1 / -1;
         grid-row: 5 / 5;
     }
+
+    
 }
