--- a/sass/_reviews.scss
+++ b/sass/_reviews.scss
@@ -2,7 +2,6 @@
 
     &__h2 {
         text-align: center;
-        margin-bottom: 2cqh;
     }
 
     &__p {
@@ -22,7 +21,7 @@
     grid-template-columns: repeat(3, auto);
     grid-row-gap: 7rem;
     grid-column-gap: 4rem;
-    margin: 10rem;
+    margin-bottom: 10rem;
     border-radius: 5px;
     padding: 2.5rem;
 
