--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -40,12 +40,12 @@ body {
 
 .contacts {
   background: linear-gradient(0deg, #ffe5e5, #ffe5e5 95%, rgba(255, 229, 229, 0) 100%);
-  padding: 7rem 7rem;
+  padding: 10rem 15rem;
   overflow: hidden; }
   .contacts .contact {
     background: #fff;
-    box-shadow: 0 0 3px 4px white;
-    border-radius: 20px;
+    box-shadow: 0 0 2px 4px rgba(236, 214, 214, 0.4);
+    border-radius: 15px;
     display: grid;
     grid-template-columns: minmax(50, 1fr) minmax(0, 1fr);
     grid-template-rows: repeat(3, min-content);
@@ -72,7 +72,7 @@ body {
       grid-column: 1 / 2;
       grid-row: 3 / 4; }
   .contacts__img--main {
-    width: 60%;
+    width: 80%;
     grid-column: 2 / 3;
     grid-row: 1 / -1;
     transform: scale(1.2) translateY(-5%);
@@ -80,7 +80,7 @@ body {
     margin-right: 10rem; }
   .contacts__img--1 {
     width: 12rem;
-    transform: scale(-1, 1); }
+    transform: translate(180%) scale(-1, 1); }
   .contacts__img--2 {
     width: 20rem;
     grid-column: 1 / 2;
@@ -89,7 +89,8 @@ body {
   .contacts__img--3 {
     width: 10rem;
     grid-column: 3 / 4;
-    grid-row: 3 / 4; }
+    grid-row: 3 / 4;
+    transform: translate(120%); }
 
 .delivery {
   display: grid;
@@ -148,6 +149,46 @@ body {
       margin-bottom: 3rem; }
     .features .table__p {
       text-align: center; }
+
+.footer {
+  background-color: #FEE5E5;
+  padding: 5rem;
+  display: grid;
+  grid-template-columns: 5rem repeat(4, 1fr) 5rem; }
+  .footer__logo {
+    grid-column: 2 / 3; }
+  .footer__menu {
+    list-style: none; }
+  .footer__link:link, .footer__link:visited {
+    text-decoration: none;
+    color: #000;
+    outline: none;
+    transition: all, .2s; }
+  .footer__link:hover, .footer__link:active {
+    color: #FA5959; }
+  .footer__menu--1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center; }
+  .footer__menu--2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center; }
+  .footer__menu--3 {
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+
+.copyright {
+  font-size: 1.4rem;
+  color: #000;
+  margin-top: 6rem;
+  margin-right: auto;
+  margin-left: auto;
+  text-align: center;
+  width: 100%; }
+  .copyright__link {
+    color: #000; }
 
 .gallery {
   display: grid;
@@ -335,7 +376,7 @@ body {
   line-height: 25px;
   letter-spacing: 0.04em;
   text-transform: uppercase;
-  padding: 1.6rem 4.2rem;
+  padding: 1rem 4.2rem;
   cursor: pointer;
   outline: none; }
   .btn__link--light:link, .btn__link--light:visited {
