--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ body {
 
 .contacts {
   background: linear-gradient(0deg, #ffe5e5, #ffe5e5 95%, rgba(255, 229, 229, 0) 100%);
-  padding: 10rem 15rem;
+  padding: 10rem 15rem 5rem 15rem;
   overflow: hidden; }
   .contacts .contact {
     background: #fff;
@@ -52,6 +52,9 @@ body {
     align-items: center;
     justify-items: start;
     padding: 5rem 6rem 0 8rem; }
+    .contacts .contact a {
+      text-decoration: none;
+      color: #000; }
     .contacts .contact__h2 {
       grid-column: 1 / 2;
       grid-row: 1 / 2; }
@@ -152,13 +155,19 @@ body {
 
 .footer {
   background-color: #FEE5E5;
-  padding: 5rem;
+  padding: 0 15rem 5rem 15rem;
   display: grid;
-  grid-template-columns: 5rem repeat(4, 1fr) 5rem; }
+  grid-template-columns: repeat(4, 1fr); }
   .footer__logo {
-    grid-column: 2 / 3; }
-  .footer__menu {
-    list-style: none; }
+    grid-column: 1 / 2;
+    align-self: center; }
+  .footer__box {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    max-width: 250px; }
   .footer__link:link, .footer__link:visited {
     text-decoration: none;
     color: #000;
@@ -166,25 +175,23 @@ body {
     transition: all, .2s; }
   .footer__link:hover, .footer__link:active {
     color: #FA5959; }
-  .footer__menu--1 {
+  .footer__socials {
     display: flex;
     flex-direction: column;
-    justify-content: center; }
-  .footer__menu--2 {
-    display: flex;
-    flex-direction: column;
-    justify-content: center; }
-  .footer__menu--3 {
-    display: flex;
-    justify-content: center;
-    align-items: center; }
+    align-items: center;
+    row-gap: 1.5rem; }
+  .footer__icons {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 2rem; }
+    .footer__icons--wtsp:hover, .footer__icons--wtsp:active, .footer__icons--insta:hover, .footer__icons--insta:active {
+      transform: translateY(0.2rem); }
 
 .copyright {
+  background-color: #FEE5E5;
   font-size: 1.4rem;
   color: #000;
-  margin-top: 6rem;
-  margin-right: auto;
-  margin-left: auto;
+  padding: 22px 0 24px;
   text-align: center;
   width: 100%; }
   .copyright__link {
@@ -200,11 +207,11 @@ body {
   .gallery__h2 {
     grid-column: 1 / -1;
     grid-row: 1 / 2;
-    margin-bottom: 3rem; }
+    margin-bottom: 1.5rem; }
   .gallery__select {
     grid-column: 1 / -1;
     grid-row: 2 / 3;
-    margin-bottom: 3rem; }
+    margin-bottom: 1.5rem; }
   .gallery__cakes {
     grid-column: 1 / -1;
     grid-row: 3 / 4;
@@ -241,6 +248,11 @@ body {
   .gallery__btn {
     grid-column: 1 / -1;
     grid-row: 5 / 5; }
+    .gallery__btn-sm:hover {
+      background-image: linear-gradient(180deg, #FA5959 0%, rgba(255, 107, 107, 0.85) 100%);
+      color: #fff;
+      border: 1px solid #fff;
+      transform: translateY(-0.3rem); }
 
 .header {
   margin-bottom: 112px;
@@ -276,9 +288,10 @@ body {
 .mywork {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  grid-gap: calc(((100vw - 20rem)/5)/6);
-  justify-content: center;
+  column-gap: 3rem;
+  row-gap: 3rem;
   justify-items: center;
+  justify-content: center;
   margin: 0 10rem; }
   .mywork__h2 {
     grid-column: 1 / -1;
@@ -297,7 +310,50 @@ body {
     display: block; }
   .mywork__btn {
     grid-column: 1 / -1;
-    margin-top: 4rem; }
+    margin-top: 3rem; }
+
+figure {
+  position: relative;
+  overflow: hidden; }
+  figure img {
+    transition: 0.3s; }
+  figure:hover img {
+    transform: scale(1.1); }
+
+figcaption {
+  position: absolute;
+  top: auto;
+  bottom: 0;
+  left: 0;
+  opacity: 0;
+  height: auto;
+  width: 100%;
+  padding: 1rem 2rem;
+  background-color: #6C6A6A;
+  text-align: center;
+  color: #fff;
+  transform: translateY(100%);
+  transition: transform 0.3s, opacity 0.1s 0.3s; }
+  @media only screen and (max-width: 37.5em) {
+    figcaption {
+      opacity: 1;
+      transform: translateY(0); } }
+  @media only screen and (max-width: 37.5em) {
+    figcaption {
+      opacity: 0; } }
+
+.fig--small {
+  font-size: 1.4rem;
+  line-height: 2rem; }
+  @media only screen and (max-width: 37.5em) {
+    .fig--small {
+      font-size: 1.3rem;
+      line-height: 2rem; } }
+
+figure:hover figcaption {
+  opacity: 1;
+  transform: translateY(0);
+  transition: transform 0.3s, opacity 0.1s; }
 
 .navbar {
   display: flex;
@@ -334,8 +390,7 @@ body {
     color: #ED4A4A; }
 
 .reviews__h2 {
-  text-align: center;
-  margin-bottom: 2cqh; }
+  text-align: center; }
 
 .reviews__p {
   text-align: center;
@@ -350,7 +405,7 @@ body {
   grid-template-columns: repeat(3, auto);
   grid-row-gap: 7rem;
   grid-column-gap: 4rem;
-  margin: 10rem;
+  margin-bottom: 10rem;
   border-radius: 5px;
   padding: 2.5rem; }
   .review--1 {
@@ -481,27 +536,3 @@ h4 {
     width: 25rem;
     transform: translate(0, -290px);
     left: 5rem; }
-
-figcaption {
-  position: absolute;
-  top: auto;
-  bottom: 0;
-  left: 0;
-  opacity: 0;
-  height: auto;
-  width: 100%;
-  padding: 1rem 2rem;
-  background-color: #6C6A6A;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 1.6rem;
-  line-height: 2.5rem;
-  text-align: center;
-  letter-spacing: 0.04em;
-  color: #fff;
-  transform: translateY(100%);
-  transition: transform 0.4s, opacity 0.1s 0.3s; }
-
-.fig--small {
-  font-size: 1.4rem;
-  line-height: 2rem; }
