--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,16 +1,21 @@
 .footer{
     background-color: $color-primary;
-    padding: 5rem;
-
+    padding: 0 15rem 5rem 15rem;
     display: grid;
-    grid-template-columns: 5rem repeat(4, 1fr) 5rem;
+    grid-template-columns: repeat(4, 1fr);
 
     &__logo{
-        grid-column: 2 / 3;
+        grid-column: 1 / 2;
+        align-self: center;
     }
     
-    &__menu {
+    &__box {
         list-style: none;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        max-width: 250px;
     }
     
     &__link:link,
@@ -24,33 +29,34 @@
     &__link:active {
         color: $color-pink-1;
     }
-
-    &__menu--1 {
+    
+    &__socials {
         display: flex;
         flex-direction: column;
-        justify-content: center;
-    }
-
-    &__menu--2 {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-    }
-
-    &__menu--3 {
-        
-        display: flex;
-        justify-content: center;
         align-items: center;
+        row-gap: 1.5rem;
+    }
+
+    &__icons {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 2rem;
+        
+        &--wtsp,
+        &--insta {
+            &:hover,
+            &:active {
+            transform: translateY(.2rem);
+            }
+        }
     }
 }
 
 .copyright {
+    background-color: $color-primary;
     font-size: 1.4rem;
     color: $color-black;
-    margin-top: 6rem;
-    margin-right: auto;
-    margin-left: auto;
+    padding: 22px 0 24px;
     text-align: center;
     width: 100%;
 
