--- a/sass/_gallery.scss
+++ b/sass/_gallery.scss
@@ -9,13 +9,13 @@
     &__h2 {
         grid-column: 1 / -1;
         grid-row: 1 / 2;
-        margin-bottom: 3rem;
+        margin-bottom: 1.5rem;
     }
 
     &__select {
         grid-column: 1 / -1;
         grid-row: 2 / 3;
-        margin-bottom: 3rem;
+        margin-bottom: 1.5rem;
     }
 
     &__cakes {
@@ -69,6 +69,15 @@
     &__btn {
         grid-column: 1 / -1;
         grid-row: 5 / 5;
+
+        &-sm {
+            &:hover {
+                background-image: linear-gradient(180deg, #FA5959 0%, rgba(255, 107, 107, 0.85) 100%);
+                color: #fff;
+                border: 1px solid #fff;
+                transform: translateY(-0.3rem);
+            }
+        }
     }
 
     
