--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -20,6 +20,10 @@ $color-grey: #6C6A6A;
 html {
     box-sizing: border-box;
     font-size: 62.5%;
+
+    @media only screen and (max-width: 1280px) {
+        font-size: 50%;
+    }
 }
 
 body {
