--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -6,11 +6,26 @@
     align-items: center;
     margin: 10rem 40rem 10rem 10rem;
 
+    @media only screen and (max-width: 1000px) {
+        margin: 10rem;
+    }
+    @media only screen and (max-width: 800px) {
+        margin: 5rem;
+    }
+    @media only screen and (max-width: 600px) {
+        grid-template-columns: auto;
+        grid-row-gap: 5rem;
+    }
+
     &__pic {
         max-width: 27rem;
         display: block;
         grid-column: 1 / 2;
         grid-row: 1 / 2;
+
+        @media only screen and (max-width: 600px) {
+            justify-self: center;
+        }
     }
 
     &__text {
@@ -19,5 +34,11 @@
         display: grid;
         grid-template-rows: repeat(3, min-content);
         row-gap: 1.8rem;
+
+        @media only screen and (max-width: 600px) {
+            grid-column: 1 / 2;
+            grid-row: 2 / 3;
+        }
     }
+
 }
