--- a/sass/_contacts.scss
+++ b/sass/_contacts.scss
@@ -3,6 +3,10 @@
     padding: 10rem 15rem 5rem 15rem;
     overflow: hidden;
 
+    @media only screen and (max-width: 800px) {
+        padding: 7rem 5rem;
+    }
+
 
     .contact {
         background: $color-white;
@@ -14,6 +18,12 @@
         align-items: center;
         justify-items: start;
         padding: 5rem 6rem 0 8rem;
+
+        @media only screen and (max-width: 800px) {
+            grid-template-columns: auto;
+            justify-items: center;
+            padding: 3rem 5rem 5rem 5rem;
+        }
 
         a {
             text-decoration: none;
@@ -55,6 +65,10 @@
         transform: scale(1.2) translateY(-5%);
         justify-self: end;
         margin-right: 10rem;
+
+        @media only screen and (max-width: 800px) {
+            display: none;
+        }
     }
 
     &__img--1 {
