--- a/sass/_delivery.scss
+++ b/sass/_delivery.scss
@@ -7,6 +7,12 @@
     grid-column-gap: 6rem;
     margin: 10rem;
 
+    @media only screen and (max-width: 800px) {
+        margin: 7rem 5rem;
+        grid-column-gap: 2rem;
+        grid-row-gap: 4rem;
+    }
+
     &__h2 {
         grid-column: 1 / -1;
         grid-row: 1 / 2;
@@ -20,6 +26,12 @@
         padding: 5rem;
         display: flex;
         align-items: center;
+
+        @media only screen and (max-width: 600px) {
+            flex-direction: column;
+            justify-content: center;
+            padding: 2rem 1rem;
+        }
     }
 
     &--1 {
@@ -35,6 +47,13 @@
         height: 5rem;
         width: 7rem;
         fill: $color-pink-3;
+
+        @media only screen and (max-width: 600px) {
+            height: 5rem;
+            width: 5rem;
+            margin-right: 0;
+            margin-bottom: 1rem;
+        }
     }
 
     &__card-text {
