--- a/sass/_features.scss
+++ b/sass/_features.scss
@@ -3,6 +3,13 @@
     grid-template-columns: repeat(4, 1fr);
     margin: 5rem;
 
+    @media only screen and (max-width: 800px) {
+        grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+        grid-gap: 3rem;
+        justify-items: center;
+        justify-content: center;
+    }
+
     .table{
         box-shadow: 4px 4px 4px rgba(252, 214, 214, 0.1), inset 4px 4px 4px rgba(251, 232, 232, 0.1);
         border-radius: 10px;
