--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -4,9 +4,24 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);
 
+    @media only screen and (max-width: 800px) {
+        padding: 0 5rem 2rem 5rem;
+        display: grid;
+        grid-template-columns: auto;
+        justify-content: center;
+        grid-row-gap: 2rem;
+    }
+
+
     &__logo{
         grid-column: 1 / 2;
         align-self: center;
+
+        @media only screen and (max-width: 800px) {
+            grid-column: 1 / -1;
+            height: 5rem;
+            width: 15.5rem;
+        }
     }
     
     &__box {
@@ -16,6 +31,10 @@
         justify-content: center;
         align-items: flex-start;
         max-width: 250px;
+
+        @media only screen and (max-width: 800px) {
+            align-items: center;
+        }
     }
     
     &__link:link,
@@ -35,12 +54,20 @@
         flex-direction: column;
         align-items: center;
         row-gap: 1.5rem;
+
+       
     }
 
     &__icons {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         column-gap: 2rem;
+
+        @media only screen and (max-width: 600px) {
+            width: 2.5rem;
+            height: 2.5rem;
+            align-items: center;
+        }
         
         &--wtsp,
         &--insta {
