--- a/sass/_gallery.scss
+++ b/sass/_gallery.scss
@@ -6,6 +6,12 @@
     align-items: center;
     margin: 0 10rem;
 
+    @media only screen and (max-width: 600px) {
+        margin: 3rem 5rem;
+        grid-row-gap: 4rem;
+        margin: 7rem 5rem;
+    }
+
     &__h2 {
         grid-column: 1 / -1;
         grid-row: 1 / 2;
@@ -16,6 +22,14 @@
         grid-column: 1 / -1;
         grid-row: 2 / 3;
         margin-bottom: 1.5rem;
+
+        @media only screen and (max-width: 600px) {
+            display: flex;
+            flex-direction: column;
+            flex-wrap: wrap;
+            align-content: center;
+            row-gap: 2rem;
+        }
     }
 
     &__cakes {
@@ -23,6 +37,10 @@
         grid-row: 3 / 4;
         display: flex;
         justify-content: space-evenly;
+
+        @media only screen and (max-width: 800px) {
+            flex-direction: column;
+        }
     }
 
     &__cake {
@@ -34,6 +52,10 @@
         border: 1px solid #FFFFFF;
         box-shadow: 4px 4px 4px rgba(252, 214, 214, 0.1), inset 4px 4px 4px rgba(251, 232, 232, 0.1);
         margin: 0 1.6rem;
+
+        @media only screen and (max-width: 800px) {
+            max-width: 50rem;
+        }
     
         &-img {
             display: block;
