--- a/sass/_mywork.scss
+++ b/sass/_mywork.scss
@@ -7,6 +7,11 @@
     justify-content: center;
     margin: 0 10rem;
 
+    @media only screen and (max-width: 800px) {
+        grid-template-columns: repeat(2, 1fr);
+        margin: 0 5rem;
+    }
+
 
     &__h2 {
         grid-column: 1 / -1;
@@ -14,6 +19,10 @@
         z-index: 10;
         align-self: center;
         margin-bottom: 7rem;
+
+        @media only screen and (max-width: 800px) {
+            margin-bottom: 0;
+        }
     }
 
     &__item {
