--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -6,6 +6,10 @@
     flex-wrap: wrap;
     padding: 3rem 10rem;
 
+    @media only screen and (max-width: 800px) {
+        padding: 3rem 5rem;
+    }
+
     &__logo {
         display: flex;
         align-items: center;
@@ -21,6 +25,10 @@
         align-items: center;
         height: 5rem;
         min-width: 40rem;
+
+        @media only screen and (max-width: 1000px) {
+            display: none;
+        }
     }
 
     &__list-item {
