--- a/sass/_reviews.scss
+++ b/sass/_reviews.scss
@@ -6,7 +6,8 @@
 
     &__p {
         text-align: center;
-        margin: 0 25%;
+        margin: 0 auto;
+        max-width: 50rem;
     }
 
     &__btn {
