--- a/sass/_features.scss
+++ b/sass/_features.scss
@@ -13,7 +13,9 @@
     .table{
         box-shadow: 4px 4px 4px rgba(252, 214, 214, 0.1), inset 4px 4px 4px rgba(251, 232, 232, 0.1);
         border-radius: 10px;
+        width: 100%;
         max-width: 25rem;
+        min-width: 15rem;
         display: flex;
         flex-direction: column;
         justify-content: center;
