--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -4,7 +4,7 @@
     background-color: $color-primary;
     display: grid;
     grid-template-rows: repeat(5, min-content);
-    grid-template-columns: repeat(2, minmax(20vw, min-content)) 40vw;
+    grid-template-columns: 1fr 1fr 2fr;
     grid-row-gap: 48px;
     align-items: end;
     justify-items: start;
