--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -42,6 +42,7 @@
         text-decoration: none;
         outline: none;
         transition: all .2s;
+        background-attachment: fixed;
 
         &:hover,
         &:active {
@@ -54,6 +55,7 @@
         color: $color-white;
         box-shadow: 0px 3px 4px rgba(235, 87, 87, 0.3);
         transition: all .2s;
+        background-attachment: fixed;
 
         &:hover,
         &:active {
@@ -73,6 +75,10 @@
         text-transform: none;
         padding: .5rem 1.1rem;
         margin: 0 1rem;
+    }
+
+    &:focus {
+        outline: 2px solid $color-pink-3;
     }
 }
 
